# envvault

./: Cargo.toml  LICENSE  README.md  build.rs  security_audit.md
.cargo/: audit.toml
integration-tests/: 10_vault_basics.sh  20_run_env.sh  30_run_harden.sh  40_dir_vault.sh  50_unrun.sh  60_run_sandbox.sh  70_baseline_verify.sh  80_baseline_pin_unpin.sh  README.md  lib.sh  run_all.sh
shim/: harden.c
src/: crypto.rs  dirvault.rs  harden.rs  integrity.rs  main.rs  password.rs  run.rs  sandbox.rs  shim.rs  store.rs  vault.rs
src/tui/: app.rs  mod.rs
