[package]
name = "envvault"
version = "0.1.0"
edition = "2024"
description = "Run programs with secrets from password-encrypted, named environment vaults"
license = "MIT"
repository = "https://github.com/debasish-raychawdhuri/envvault"
readme = "README.md"

[[bin]]
name = "envvault"
path = "src/main.rs"

[build-dependencies]
# Locate a C compiler at build time to compile the `env run --harden` LD_PRELOAD
# shim (shim/harden.c) into an embedded shared object.
cc = "1"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

# Password derivation (KDF) + authenticated encryption (AEAD)
argon2 = "0.5"
chacha20poly1305 = "0.10"

# Randomness for salt + nonce
getrandom = "0.2"

# Text armoring of the encrypted blob
base64 = "0.22"

# Interactive password prompt (no echo)
rpassword = "7"

# Password-strength estimation (dictionary/pattern aware) shown when a vault
# password is created or changed.
zxcvbn = "3"

# Wipe secrets from memory when dropped
zeroize = { version = "1", features = ["derive"] }

# Terminal UI for the data-editing mode
ratatui = "0.29"
crossterm = "0.28"

# Clear the system clipboard after a secret is pasted into the editor.
# default-features off avoids pulling the `image` crate (image clipboard);
# `wayland-data-control` adds Wayland support alongside the X11 default.
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }

# Locating the per-user config directory
dirs = "5"

# Archive a directory tree to/from bytes for directory vaults (pure Rust)
tar = "0.4"

# Content hashing for the config-integrity baseline (`run --verify`). BLAKE3 is
# not Merkle–Damgård (no length-extension) and `Hash::to_hex()` gives the hex
# string we store, so no separate hex crate is needed.
blake3 = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
